# pytemplate

./: .buildinfo  .gitattributes  .gitignore  .pylintrc  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytemplate.algorithms.html  pytemplate.functions_for_pytest_sample.html  pytemplate.html  pytemplate.http_client.html  pytemplate.performance_upward.html  pytemplate.read_json.html  search.html  searchindex.js  setup.sh
.doctrees/: environment.pickle  index.doctree  modules.doctree  pytemplate.algorithms.doctree  pytemplate.doctree  pytemplate.functions_for_pytest_sample.doctree  pytemplate.http_client.doctree  pytemplate.performance_upward.doctree  pytemplate.read_json.doctree
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/COMMIT_TEMPLATE/: .commit_template
.github/PRE_COMMIT_MASTER/: pre-commit
.github/workflows/: ci_integration_tests.yml  ci_unit_tests.yml  generate_documents.yml  (+1 more)
_sources/: pytemplate.algorithms.rst.txt  pytemplate.http_client.rst.txt  pytemplate.read_json.rst.txt  pytemplate.rst.txt
analyzer/: __init__.py  __main__.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  pytemplate.algorithms.html  pytemplate.functions_for_pytest_sample.html  pytemplate.html  pytemplate.performance_upward.html  search.html  searchindex.js  tests.html
memory_analyzer/: analyzer.py
pytemplate/: __init__.py  expand_and_eval.py  main.py
services/: Dockerfile  docker-compose.yml  mock.py
tests/: conftest.py  test_pytemplate.py
(+38 files in other folders)
