[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "python template project"
authors = ["tkhshtsh0917 <puredreamdrum@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tkhshtsh0917/pytemplate"
repository = "https://github.com/tkhshtsh0917/pytemplate"
documentation = "https://tkhshtsh0917.github.io/pytemplate/"

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.5"
ortools = "^8.0.8283"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.790"
isort = "^5.6.4"
Sphinx = "^3.2.1"
Cython = "^0.29.21"
pytest-mock = "^3.3.1"
sphinx-rtd-theme = "^0.5.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3

[tool.poetry.scripts]
main = "pytemplate:main"
knapsack = "pytemplate:knapsack"
knapsacks = "pytemplate:maltiple_knapsacks"
binpacking = "pytemplate:bin_packing"
primes = "pytemplate:prime_eratosthenes"
search = "pytemplate:dijkstra_search"
